test/corpus/literals.txt
==================
basic
==================

123
0b01010
0o2345
0xaf01
2.34e-1
"hello"
'x'
true
false

---

(source_file
  (expr_stmt
    (literal
      (number_literal)))
  (expr_stmt
    (literal
      (number_literal)))
  (expr_stmt
    (literal
      (number_literal)))
  (expr_stmt
    (literal
      (number_literal)))
  (expr_stmt
    (literal
      (number_literal)))
  (expr_stmt
    (literal
      (string_literal)))
  (expr_stmt
    (literal
      (char_literal)))
  (expr_stmt
    (literal
      (bool_literal)))
  (expr_stmt
    (literal
      (bool_literal))))

==================
with suffix
==================

123u8
"hello"str
'x'b

---
(source_file
  (expr_stmt
    (literal
      (number_literal)
      (identifier)))
  (expr_stmt
    (literal
      (string_literal)
      (identifier)))
  (expr_stmt
    (literal
      (char_literal)
      (identifier))))
