test/corpus/stmts.txt
==================
if
==================

if true {}

---

(source_file
  (if_stmt
    (bool_literal)
    (compound_stmt)))

==================
if-else
==================

if true {
} else {
}

---

(source_file
  (if_stmt
    (bool_literal)
    (compound_stmt)
    (compound_stmt)))

==================
if-else-if
==================

if true {
} else if true {
}

---

(source_file
  (if_stmt
    (bool_literal)
    (compound_stmt)
    (if_stmt
      (bool_literal)
      (compound_stmt))))

==================
while
==================

while true {}

---

(source_file
  (while_stmt
    (bool_literal)
    (compound_stmt)))

==================
do-while
==================

do {} while true

---

(source_file
  (do_while_stmt
    (compound_stmt)
    (bool_literal)))
